syntax = "proto3";
option java_multiple_files = true;
package com.example.grpc.server.grpcserver.tobakko;

message ProtoTobakko {
    string firm = 1;
    string taste = 2;
    string strength = 3;
    int32 price = 4;
}

message DeleteRequest {
	string tobakko_id = 1;
    string payment_id = 2;
}

message DeleteResponse {
    string report = 1;
}

message GetRequest {
}

message GetResponse {
    repeated ProtoTobakko tobakkos = 1;
}

message CreateRequest {
	ProtoTobakko tobakko = 1;
}

message CreateResponse {
    string id = 1;
}

service TobakkoService {
    rpc get(GetRequest) returns (GetResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
    rpc create(CreateRequest) returns (CreateResponse);
}
